--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   id="icon"
                   class="float-left"
                 />
-                <div class="float-left">
+                <div class="float-left current-temperature">
                   <strong class="temperature" id="temperature">19</strong
                   ><span class="units">
                     <a href="#" id="celsius-link" class="active">°C</a> |
