Add Forecast  and deleted the temp conversion

--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
                 />
                 <div class="float-left current-temperature">
                   <strong class="temperature" id="temperature">19</strong
-                  ><span class="units">
-                    <a href="#" id="celsius-link" class="active">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a>
-                  </span>
+                  ><span class="units"> °C</span>
                 </div>
               </div>
             </div>
